# satoshi-bot

./: Cargo.toml
.config/: default-config.toml
src/: config.rs  main.rs  private_channel.rs
