[package]
name = "satoshi-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.5", features = ["voice"] }
tokio = { version = "1.26", features = ["macros", "rt-multi-thread"] }
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
confy = "0.5"